--- a/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html
+++ b/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html
@@ -240,30 +240,35 @@ MLA Statement on the Scholarly<br/>Edition in the Digital Age</a></li></ul></div
 				</section>
 
 				<section>
-				    Liste « Thèmes p. l’article de la Guilde » 
-				    <img>CRLR GR MS 1 E/7c</img>
-				    <div class="smaller">
-				    « D’une certaine pureté », <i>Bulletin mensuel de la Guilde du livre</i>, no 1, janvier 1940, pp. 2-4
-				    <br/>« Deux fragments d’un hommage à C. F. Ramuz », <i>Suisse romande</i>, no 2, 1er juin 1938, pp. 80-82</div>
+				    <img width="50%" src="images/CRLR_GR_MS1E7c_1r_1.png"></img>
+				    <div style="width: 300px;float: right">
+				    	<br/>
+					    <h4>Liste « Thèmes p. l’article de la Guilde »</h4>
+					    <br/><br/>
+					    <div class="smaller" style="text-align: left"><span class="small">
+					    « D’une certaine pureté », <i>Bulletin mensuel de la Guilde du livre</i>, no 1, janvier 1940, pp. 2-4
+					    <br/><br/>« Deux fragments d’un hommage à C. F. Ramuz », <i>Suisse romande</i>, no 2, 1er juin 1938, pp. 80-82</span>
+						</div>
+					</div>
 				</section>
 
 				<section>
-				    Brouillon, « L’Hiver au village »
-				    <img>CRLR GR MS 1 E/3a</img>
+				    <h4>Brouillon, « L’Hiver au village »</h4>
+				    <img width="50%" src="images/CRLR_GR_MS1E3a_1r_1.png"></img>
 				</section>
 
 				<section>
-				    Mise au net, « Le Monde réel »
-				    <img>CRLR GR MS 2 D/7a</img>
+				    <h4>Mise au net, « Le Monde réel »</h4>
+				    <img width="45%" src="images/CRLR_GR_MS2D7a_1r_1.png"></img>
 				</section>
 
 				<section>
-				    Brouillon, « Villages » 
-				    <img>MS 106/76, fo 1 (Bibliothèque de La Chaux-de-Fonds)</img>
+				    <h4>Brouillon, « Villages » </h4>
+				    <img width="50%" src="images/MS106-0076-1.jpg"></img>
 				</section>
 
 
-				<section data-background-image="msVillage" class="smaller">
+				<section data-background-image="MS106-0076-1.jpg" data-background-opacity="10%" class="smaller">
 				        <h3>Transcription linéaire du début<br/>de « Villages », sans les biffures</h3>
 				        <br/><br/>
 				        <div style="text-align: left;line-height: 150%">
@@ -271,11 +276,11 @@ MLA Statement on the Scholarly<br/>Edition in the Digital Age</a></li></ul></div
 				</section>
 
 				<section>
-					<b>Parcours d’une note de Journal « Missy 11h et demie »</b>
+					<h4>Parcours d’une note de Journal « Missy 11h et demie »</h4>
 					<br/><br/>
-					<img>CRLR GR MS 4 A/3a</img>
-					<img>CRLR_GR MS4A1a 7r (tout en bas) et 7v (tout en haut)</img>
-					<img>« Cendre », Aujourd’hui, no 32, 10 juillet 1930, p. 1 (image donnée dans notre article pour Humanistica Digitale)</img>
+					<img width="40%" src="images/roud.png">CRLR GR MS 4 A/3a</img>
+					<img width="40%" src="images/roud.png">CRLR_GR MS4A1a 7r (tout en bas) et 7v (tout en haut)</img>
+					<img width="40%" src="images/roud.png">« Cendre », Aujourd’hui, no 32, 10 juillet 1930, p. 1 (image donnée dans notre article pour Humanistica Digitale)</img>
 				</section>
 
 
