--- a/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html
+++ b/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html
@@ -268,19 +268,18 @@ MLA Statement on the Scholarly<br/>Edition in the Digital Age</a></li></ul></div
 				</section>
 
 
-				<section data-background-image="MS106-0076-1.jpg" data-background-opacity="10%" class="smaller">
+				<section data-background-image="images/MS106-0076-1.jpg" data-background-opacity="0.2" class="smaller">
 				        <h3>Transcription linéaire du début<br/>de « Villages », sans les biffures</h3>
 				        <br/><br/>
 				        <div style="text-align: left;line-height: 150%">
 					« (Le sentiment de mes « ressources » poétiques est étroitement lié à mon état spirituel. Suivant l’heure, elles m’apparaissent donc immenses ou infimes ; j’ignore entièrement leur réelle valeur, leur existence absolue.<br/>Parfois une illumination tire de l’ombre d’immenses trésors instantanés. Si je veux les saisir par une approche méthodique, cet or comme celui des fables n’est plus dans ma main que sable et feuilles mortes.<br/>Hier, après une longue période contradictoire et troublée de bien des semaines, un sursaut inespéré m’a rendu contact avec les richesses de ma quête de cet été, alors que je les croyais à jamais évanouies. « Villages » redevient donc possible, et tout de suite, j’en veux faire le centre de mon hiver.)<br/>Pôle de pensée, « chapitres » possibles. Garder la liberté, l’imprévu d’une promenade non machinée. Dédicace à m – sans la nommer.<br/>Pour finir, peut-être, reprendre cette phrase des notes : […] »</div>
 				</section>
 
-				<section>
+				<section data-background-image="images/cendreALL.png">
+					<!--
+					<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 					<h4>Parcours d’une note de Journal « Missy 11h et demie »</h4>
-					<br/><br/>
-					<img width="40%" src="images/roud.png">CRLR GR MS 4 A/3a</img>
-					<img width="40%" src="images/roud.png">CRLR_GR MS4A1a 7r (tout en bas) et 7v (tout en haut)</img>
-					<img width="40%" src="images/roud.png">« Cendre », Aujourd’hui, no 32, 10 juillet 1930, p. 1 (image donnée dans notre article pour Humanistica Digitale)</img>
+					-->
 				</section>
 
 
