--- a/talks/20190603_graphSDE/20190603_graphSDE.html
+++ b/talks/20190603_graphSDE/20190603_graphSDE.html
@@ -72,7 +72,7 @@
 					<br/><br/>
 					Elena Spadini, Université de Lausanne
 					<br/><br/>
-					Présentation en ligne: <span style="text-decoration: underline; text-decoration-color: grey"><a href="https://elespdn.github.io/talks/20190603_graphSDE/20190603_graphSDE.html#/">http://small.cat/hat</a></span></div>
+					Présentation en ligne: <span style="text-decoration: underline; text-decoration-color: grey"><a href="https://elespdn.github.io/talks/20190603_graphSDE/20190603_graphSDE.html#/">elespdn.github.io/talks/20190603_graphSDE/20190603_graphSDE.html</a></span></div>
 				</section>
 
 
