--- a/talks/20190612_Krakow/20190612_Krakow.html
+++ b/talks/20190612_Krakow/20190612_Krakow.html
@@ -125,7 +125,7 @@
 
 				<section>2. Semantic web for genetic criticism</section>
 				
-				<section>
+				<section class="small">
 					<p>The goal of semantic web is to organize digital online content in a way that is understandable by machines.<br/>The organization follows rules defined in shared ontologies, which allows the query of big corpora and supervised or unsupervised forms of inferences</p>
 					<p>Example: <a href="https://www.europeana.eu/portal/en">Europeana</a></p>
 				</section>
