--- a/talks/20190612_Krakow/20190612_Krakow.html
+++ b/talks/20190612_Krakow/20190612_Krakow.html
@@ -99,7 +99,9 @@
  				</section>
 
 
- 				<section>1. Genetic networks</section>
+ 				<section data-background-color="tomato">
+ 					<h2 style="color:black">1. Genetic networks</h2>
+ 				</section>
 
  				<section>
 					<img src="images/bovary.png">
@@ -118,29 +120,69 @@
 					<div class="source" style="width: 60%;float: right;"><span class="small">Daniel Ferrer, « La représentation hypertextuelle des manuscrits. Quelques leçons de douze années d'expériences », <i>L'Edition du manuscrit. De l'archive de création au scriptorium numérique</i>, éd. A. Crasson, 2008</span></div>
 				</section>
 
-				<section data-background-image="images/network.png">
-					Relation between genetic entities
-					<br/><br/><span style="text-decoration: line-through">variants</span>
-				</section>
-
-				<section>2. Semantic web for genetic criticism</section>
+				<section data-background-color="tomato">
+ 					<h2 style="color:black">2. Semantic web<br/>for genetic criticism</h2>
+ 				</section>
 				
-				<section class="small">
-					<p>The goal of semantic web is to organize digital online content in a way that is understandable by machines.<br/>The organization follows rules defined in shared ontologies, which allows the query of big corpora and supervised or unsupervised forms of inferences</p>
-					<p>Example: <a href="https://www.europeana.eu/portal/en">Europeana</a></p>
-				</section>
-
 				<section>
-					<h4>Ontology<br/><br/><br/>RDF triple</h4>
-					<br/><br/>
-					<span class="fragment"><i>subject &emsp;&emsp;&emsp;&emsp;&emsp; -----predicate---> &emsp;&emsp;&emsp;&emsp;&emsp; object</i></span>
-					<br/><br/>
-					<span class="fragment"><i>class &emsp;&emsp;&emsp; -----property---> &emsp;&emsp;&emsp; class / literal</i></span>
-					
-
+					<div>Relation between genetic entities</div>
+					<div style="text-decoration: line-through">variants</div>
+					<div class="fragment">
+						&#129087;<br/><br/><br/>
+						<div>graph data-model</div>
+						&#129087;
+						<div><b style="color:tomato">semantic web technologies</b></div> 	
+						&#129085;
+						<div>external constraints</div>
+					</div>
 				</section>
 
-				<section>3. Gustave Roud</section>
+				<section class="small">
+					<h3>Semantic web. A web of linked data</h3>
+					<p>The Semantic Web provides a common framework that allows <b>data to be shared and reused</b> across application, enterprise, and community boundaries (<i>W3C</i>). Data are <b>organized</b> following rules defined in <b>shared ontologies</b>, which allows the query of big corpora and inferences.</p><br/>
+					<table>
+						<tr>
+							<td><img src="images/europeana.png"></td>
+							<td><p>Example: <a href="https://www.europeana.eu/portal/en">Europeana</a></p>
+					<p class="smaller">Other examples: governments (<a href="https://data.gov.uk/">data.gov.uk</a>), libraries (<a href="http://data.bnf.fr/">data.bnf.fr</a>), web searches (<a href="https://en.wikipedia.org/wiki/Knowledge_Graph">Google Knowledge Graph</a>), bio-medical resources (<a href="http://geneontology.org/">The Gene Ontology Resource</a></p></td>
+						</tr>
+					</table>
+				</section>
+
+				<section data-background-image="images/NDIGORP042968_page-0002.jpg" data-background-opacity="0.1">
+					<h4>Semantics in RDF triple</h4>
+					<br/><br/>
+					<table style="table-layout: fixed;width: 100%;font-weight: bold;color:tomato" class="small">
+						<tr>
+							<td>subject</td>
+							<td>&#9135; predicate &#10141;</td>
+							<td>object</td>
+						</tr>
+					</table>
+					<br/>
+					<table class="fragment smaller" style="table-layout: fixed;width: 100%">
+						<tr>
+							<td>manuscript BJ Rkp. Przyb. 9/19</td>
+							<td>&#9135; has author &#10141;</td>
+							<td>Wisława Szymborska</td>
+						</tr>
+						<tr>
+							<td>manuscript BJ Rkp. Przyb. 9/19</td>
+							<td>&#9135; is preserved in &#10141;</td>
+							<td>Biblioteka Jagiellońska</td>
+						</tr>
+						<tr>
+							<td>manuscript BJ Rkp. Przyb. 9/19</td>
+							<td>&#9135; has digital copy identifier &#10141;</td>
+							<td><a href="https://jbc.bj.uj.edu.pl/dlibra/publication/655374/edition/621451/content">NDIGORP042968</a></td>
+						</tr>
+					</table>
+					<!--<span class="fragment"><i>class &emsp;&emsp;&emsp; property &emsp;&emsp;&emsp; class / literal</i></span>-->
+				</section>
+
+				<section data-background-color="tomato">
+ 					<h2 style="color:black">3. Gustave Roud</h2>
+ 				</section>
 
 
 				<section>
