--- a/talks/20190612_Krakow/20190612_Krakow.html
+++ b/talks/20190612_Krakow/20190612_Krakow.html
@@ -372,7 +372,7 @@
 					<div style="text-align: left">
 						<br/><br/><br/><br/><br/><br/><br/><br/>
 						<div style="font-size: 0.4em;padding-right: 50%">
-							Alessio Christen, Elena Spadini, "Modelling the writing process</i>, GENESIS - CRACOW 2019.<br/><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a>
+							Alessio Christen, Elena Spadini, "Modelling the writing process"</i>, GENESIS - CRACOW 2019.<br/><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a>
 							
 							<br/>Photos: copyright AGR - CLSR (UNIL)</div>
 					</div>
