--- a/talks/20190612_Krakow/20190612_Krakow.html
+++ b/talks/20190612_Krakow/20190612_Krakow.html
@@ -151,7 +151,7 @@
 
 				<section data-background-image="images/NDIGORP042968_page-0002.jpg" data-background-opacity="0.1">
 					<h4>Semantics in RDF triple</h4>
-					<br/><br/>
+					<br/>
 					<table style="table-layout: fixed;width: 100%;font-weight: bold;color:tomato" class="small">
 						<tr>
 							<td>subject</td>
@@ -162,21 +162,32 @@
 					<br/>
 					<table class="fragment smaller" style="table-layout: fixed;width: 100%">
 						<tr>
-							<td>manuscript BJ Rkp. Przyb. 9/19</td>
+							<td>ms BJ Rkp. Przyb. 9/19</td>
 							<td>&#9135; has author &#10141;</td>
 							<td>Wisława Szymborska</td>
 						</tr>
 						<tr>
-							<td>manuscript BJ Rkp. Przyb. 9/19</td>
+							<td>ms BJ Rkp. Przyb. 9/19</td>
 							<td>&#9135; is preserved in &#10141;</td>
 							<td>Biblioteka Jagiellońska</td>
 						</tr>
 						<tr>
-							<td>manuscript BJ Rkp. Przyb. 9/19</td>
+							<td>ms BJ Rkp. Przyb. 9/19</td>
 							<td>&#9135; has digital copy identifier &#10141;</td>
 							<td><a href="https://jbc.bj.uj.edu.pl/dlibra/publication/655374/edition/621451/content">NDIGORP042968</a></td>
 						</tr>
 					</table>
+					<br/>
+					<div class="fragment smaller">
+						<div style="color:tomato; font-weight: bold;text-align: left">Ontology (rules)</div><br/>
+						<table style="table-layout: fixed;width: 100%; font-weight: bold">
+							<tr>
+								<td>manuscript</td>
+								<td>&#9135; has author &#10141;</td>
+								<td>person</td>
+							</tr>
+						</table>
+					</div>
 					<!--<span class="fragment"><i>class &emsp;&emsp;&emsp; property &emsp;&emsp;&emsp; class / literal</i></span>-->
 				</section>
 
@@ -240,7 +251,7 @@
 				
 
 				<section>
-					<h4>Classes</h4>
+					<h4>Classes (subject / object)</h4>
 					<br/>
 					<table class="small">
 						<tr>
@@ -361,7 +372,7 @@
 					<div class="fragment">
 						<h3>To do</h3>
 						<ul>
-							<li>apply to more use cases</li>
+							<li>apply to more use cases and refine the model</li>
 							<li><b>discuss with the community</b></li>
 						</ul>
 					</div>
