--- a/io/index.html
+++ b/io/index.html
@@ -77,6 +77,12 @@
 
         <main role="main" class="container" style="font-size: x-large;">
 
+        	<div class="news">
+          		<div style="font-size: 3em;text-align: center;">&#128364;</div>
+          		<br/>Call for reviews open! Contributions are welcome for <a href="https://ride.i-d-e.de/reviewers/call-for-reviews/tools-and-environments-for-digital-scholarly-editing/"><i>Tools and Environments for Digital Scholarly Editing</i></a>, new issues of <a href="https://ride.i-d-e.de/">RIDE</a>.
+            </div>
+
+
             <div class="myblock" id="home">
                 <br/>elena.spadini@unil.ch
                 <br/>
@@ -91,8 +97,7 @@
 
             </div><!--/.home -->
 
-
-
+            
             <div id="slides" class="myblock">
                 <h2><a style="" href="index.html">&#11180;</a>&nbsp;&nbsp;<b>Publication</b></h2>
                 <p>See <a href="https://applicationspub.unil.ch/interpub/noauth/php/Un/UnPers.php?PerNum=1197668&LanCode=37&menu=pub" target="_blank">Serval publications</a></p>
