--- a/talks/201707_esu.html
+++ b/talks/201707_esu.html
@@ -45,7 +45,8 @@
 				<section>
 					<h2>Querying <span style="color: orange">variants</span>.<br/>La <i style="color: orange">Commedia</i> di Boccaccio</h2>
 					<br/><br/>
-					<p style="text-align: left">Leipzig ESU 2017</p>
+					<p style="text-align: left; font-size: 0.8em">Leipzig, <i>"Culture & Technology" European Summer University in Digital Humanities</i>, 2017
+					<br/>Elena Spadini (Université de Lausanne)</p>
 
 				</section>
 
