--- a/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html
+++ b/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html
@@ -73,7 +73,7 @@
 					<br/><br/>
 					Alessio Christen et Elena Spadini (CLSR de l'UNIL)
 					<br/>
-					Présentation en ligne: <span style="text-decoration: underline; text-decoration-color: grey"><a href="https://elespdn.github.io/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html#/">http://small.cat/owl</a></span></div>
+					<span style="text-decoration: underline; text-decoration-color: grey"><a href="https://elespdn.github.io/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html#/">Présentation en ligne</a></span></div>
 				</section>
 
 
