--- a/io/index.html
+++ b/io/index.html
@@ -90,7 +90,7 @@
                 <br/>1015 Lausanne
                 <br/>Switzerland
                 <br/>
-                <br/><span class="pubtitle">I currently work at the University of Lausanne, as FNS <i>chercheuse-senior</i>|postdoc in the project <a href="http://www.unil.ch/crlr/home/menuinst/projets-de-recherche/gustave-roud-oeuvres-completes.html" target="_blank"><i>Gustave Roud "Œuvres complètes"</i></a>.</span>
+                <br/><span class="pubtitle">I currently work at the University of Lausanne, as FNS <i>chercheuse-senior</i>|postdoc in the project <a href="https://www.unil.ch/clsr/home/menuinst/projets-de-recherche/gustave-roud-oeuvres-completes.html" target="_blank"><i>Gustave Roud "Œuvres complètes"</i></a>.</span>
                 <br/><span class="slidetitle">My research interests are digital humanities, textual criticism, medieval literature studies and the history of these disciplines.</span> 
                 <br/><br/><span class="ongoingtitle">My education is in romance philology (bachelor, master, PhD) and digital humanities (master). I've studied at Sapienza Università di Roma, Universidade Nova de Lisboa, École nationale des chartes.</span> 
                 <span class="teachingtitle">From 2014 to 2017 I've been part of the Marie Curie ITN DiXiT (Digital Scholarly Editions Initial Training), based at the Dutch Royal Academy of Arts and Sciences (Huygens Institute).</span>
@@ -240,6 +240,18 @@
                 <h2><a style="" href="index.html">&#11180;</a>&nbsp;&nbsp;<b>Ongoing projects</b></h2>
                 <ul style="list-style-type:none">
                     <li>  
+                        <div id="roud">
+                            <p><span class="ongoingtitle">Gustave Roud. <i>Œuvres complètes</i></span>. Pour en savoir plus, voici la <a href="https://www.unil.ch/clsr/home/menuinst/projets-de-recherche/gustave-roud-oeuvres-completes.html">page</a> du projet.</p>
+                        </div><!-- /.roud -->
+                    </li>
+
+                    <li>  
+                        <div id="collate">
+                            <p><span class="ongoingtitle">Collate medieval languages</span>. With Jean-Baptiste Camps et Lucence Ing, we try to develop solutions for the alignment and collation of medieval texts in multiple witnesses. Here is our <a href="https://github.com/CondorCompPhil/collazione">working repo</a>.</p>
+                        </div><!-- /.collate -->
+                    </li>
+
+                    <li>  
                         <div id="monaciexist">
                             <p><span class="ongoingtitle">L'Archivio Monaci e eXist-DB</span>. Nel <a href="https://dixit.hypotheses.org/1367">post sul Blog di DiXiT</a>,  qualche informazione sull'edizione digitale dei documenti dell'Archivio Erneso Monaci e sull'utilizzo di eXist-DB e del TEI-Publisher (inclusa l'installazione di eXist su un server). Per il Laboratorio Monaci, vd. <a href="http://labmonaci.uniroma1.it/">LabMonaci.uniroma1.it</a>.</p>
                         </div><!-- /.monaciexist -->
@@ -302,9 +314,9 @@
                 <h2><a style="" href="index.html">&#11180;</a>&nbsp;&nbsp;<b>Community</b></h2>
                 <ul style="list-style-type:none">
                    <li>
-                        <p>Workshop on Scholarly Digital Editions, Graph Data-Models and Semantic Web Technologies (<a href="https://wp.unil.ch/graphsde/" target="_blank">#graphSDE2019</a>), Lausanne 3-4 June 2019. Co-chair.</p></li>
+                        <p>European Association for Digital Humanities (<a href="http://eadh.org/">EADH</a>) Executive Committee member (2017-2020).</p></li>
                    <li>
-                        <p>European Association for Digital Humanities (<a href="http://eadh.org/">EADH</a>) Executive Committee officer (2017-2020).</p></li>
+                        <p>Workshop on Scholarly Digital Editions, Graph Data-Models and Semantic Web Technologies (<a href="https://wp.unil.ch/graphsde/" target="_blank">#graphSDE2019</a>), Lausanne 3-4 June 2019. Co-chair.</p></li>
                     <li>
                         <p>Program committee member. <i><a href="http://wp.unil.ch/llist/event/comhum2018/" target="_blank">Workshop on Computational Methods in the Humanities 2018 (COMHUM 2018)</a></i>. Lausanne, 4-5 juin 2018.
                     <li>
