--- a/talks/201509_presentationVSdata.html
+++ b/talks/201509_presentationVSdata.html
@@ -13,16 +13,16 @@
 		<link rel="stylesheet" href="reveal/css/theme/white.css">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="reveal/reveal/lib/css/zenburn.css">
+		<link rel="stylesheet" href="reveal/lib/css/zenburn.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
 			var link = document.createElement( 'link' );
 			link.rel = 'stylesheet';
 			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'reveal/css/print/pdf.css' : 'reveal/reveal/reveal/reveal/css/print/papereveal/r.css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? 'reveal/css/print/pdf.css' : 'reveal/css/print/papereveal/r.css';
 			document.getElemenreveal/tsByTagName( 'head' )[0].appendChild( link );
-		</reveal/script>
+		</script>
 
 	</head>
     
@@ -281,8 +281,8 @@ scholarly editions</b>: textual scholars have devoted attention to how, where an
         </div>
 		</div>
             
-        <script src="reveal/reveal/reveal/lib/js/head.min.js"></script>
-		<script src="reveal/reveal/reveal/js/reveal.js"></sreveal/reveal/reveal/cript>
+        <script src="reveal/lib/js/head.min.js"></script>
+		<script src="reveal/js/reveal.js"></script>
 
 		<script>
 			// More info https://github.com/hakimel/reveal.js#configuration
