--- a/talks/20190719_verona/20190719_introDH.html
+++ b/talks/20190719_verona/20190719_introDH.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Diffondere la ricerca online</title>
+		<title>CAD Verona INTRO</title>
 
 		<meta name="description" content="Slides for talk at the DiXiT Workshop Rome AIUCD 2017">
 		<meta name="author" content="Elena Spadini">
