--- a/talks/20190719_verona/20190719_webPubVerona.html
+++ b/talks/20190719_verona/20190719_webPubVerona.html
@@ -402,6 +402,7 @@
 					<a href="https://www.w3schools.com/Css/css_syntax.asp" target="_blank">CSS syntax</a>
 				</section>
 
+<!-- ADD QUALCOSA SUI SELECTOR !!!!!! -->
 				<section>
 					<h3>Commenti</h3>
 					<br/><br/>
@@ -477,6 +478,7 @@
 					<h2>Esercizio</h2>
 					<ul>
 						<li>Download la cartella 'css' et unzip</li>
+						<li>Spostare il file css all'interno della cartella, accanto al file HTML</li>
 						<li>Aggiungere al file 'index.html' questa linea alla fine di <code>head</code> (nel <code>head</code>, non dopo !)<br/>
 <pre><code><link rel="stylesheet" href="css/site.css" /></code></li></pre>
 						<li>Aprire il file 'site.css' in oXygen e seguire le istruzioni nel commento.</li>
