--- a/io/index.html
+++ b/io/index.html
@@ -90,10 +90,10 @@
                 <br/>1015 Lausanne
                 <br/>Switzerland
                 <br/>
-                <br/><span class="pubtitle">I currently work at the University of Lausanne, as FNS <i>chercheuse-senior</i>|postdoc in the project <a href="https://www.unil.ch/clsr/home/menuinst/projets-de-recherche/gustave-roud-oeuvres-completes.html" target="_blank"><i>Gustave Roud "Œuvres complètes"</i></a>.</span>
-                <br/><span class="slidetitle">My research interests are digital humanities, textual criticism, medieval literature studies and the history of these disciplines.</span> 
-                <br/><br/><span class="ongoingtitle">My education is in romance philology (bachelor, master, PhD) and digital humanities (master). I've studied at Sapienza Università di Roma, Universidade Nova de Lisboa, École nationale des chartes.</span> 
-                <span class="teachingtitle">From 2014 to 2017 I've been part of the Marie Curie ITN DiXiT (Digital Scholarly Editions Initial Training), based at the Dutch Royal Academy of Arts and Sciences (Huygens Institute).</span>
+
+                <br/><span class="pubtitle">I currently work at the University of Lausanne, as chercheuse FNS senior (PostDoc) for the digital edition of <a href="https://www.unil.ch/clsr/home/menuinst/projets-de-recherche/gustave-roud-oeuvres-completes.html">"Gustave Roud, Œuvres complètes"</a>. For this project, I'm interested in digital technologies applicable to Textual and Literary Criticism, from data analysis through modelling to publishing..</span>
+				<br/><br/><span class="slidetitle">I've taught in specialized courses on Digital Philology and introductions to DH in Switzerland, France, Italy, Netherlands, Greece.</span><br/><span class="ongoingtitle">As active member of the DH community, I'm part of the Executive Committee of <a href="http://eadh.org/">EADH</a> (European Association for Digital Humanities).</span>
+				<br/><br/><span class="teachingtitle">From 2014 to 2017, I've been part of the Marie Curie ITN <a href="http://dixit.uni-koeln.de/">DiXiT</a> (Digital Scholarly Editions), based at the Dutch Royal Academy of Arts and Sciences (Huygens ING). My education is in Romance Philology (bachelor, master, PhD) and Digital Humanities (master) and I studied at Sapienza Università di Roma, Universidade Nova de Lisboa, École nationale des chartes.</span>
 
             </div><!--/.home -->
 
