--- a/io/index.html
+++ b/io/index.html
@@ -265,7 +265,7 @@
 
                     <li>
                         <div id="lancelot">
-                            <p><span class="ongoingtitle">Studi sul <i>Lancelot</i> en prose</span>. Je poursuis les recherches sur la tradition manuscrite du <i>Lancelot</i> en prose commencées pendant le doctorat. Tesi di dottorato di ricerca in Scienze del Testo, XXVII ciclo, Sapienza Università di Roma [<a href="http://elenaspadini.com/publications/dottorato.pdf">pdf</a>].</p>
+                            <p><span class="ongoingtitle">Studi sul <i>Lancelot</i> en prose</span>. Je poursuis les recherches sur la tradition manuscrite du <i>Lancelot</i> en prose commencées pendant le doctorat. Tesi di dottorato di ricerca in Scienze del Testo, XXVII ciclo, Sapienza Università di Roma [<a href="http://hdl.handle.net/11573/1307347">IRIS Sapienza</a>].</p>
                         </div><!-- /.lancelot -->
                     </li>
 
