--- a/talks/20181127_editions_critiques_numeriques.html
+++ b/talks/20181127_editions_critiques_numeriques.html
@@ -149,7 +149,7 @@
 				<section >
 					<p>A digital edition can not be printed without a loss of information and/or functionality</p>
 					<br/>					
-					<p style="font-size: 0.5em"">"Eine digitale Edition ist dadurch bestimmt, dass sie nicht ohne wesentliche Informations- und Funktionsverluste in eine typografi sche Form gebracht werden kann – und in diesem Sinne über die druckbare Edition hinausgeht."</p>
+					<p style="font-size: 0.5em">"Eine digitale Edition ist dadurch bestimmt, dass sie nicht ohne wesentliche Informations- und Funktionsverluste in eine typografi sche Form gebracht werden kann – und in diesem Sinne über die druckbare Edition hinausgeht."</p>
 					<p style="font-size: 0.5em">(Sahle 2016/2: 149)</p>  
 				</section>         	
 
