--- a/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html
+++ b/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html
@@ -666,7 +666,7 @@
 						<div class="quote">Yet it seems impossible to imagine a future when the scholars will cease to use and produce digital resources. Therefore, either the scholarly community <b>engages</b> with the digital framework, or the key decisions and models will be established <b>elsewhere</b> (by publishing houses and software developers, for instance), and imposed <b>top-down</b>. This book intends, therefore, to promote the <b>empowerment of the (digital) editors</b>, a sort of call to arms to become <b>protagonists of digital textual scholarship</b>, setting <b>agendas and goals</b> dictated by research purposes and not by the possibilities offered by the medium.</div>
 						<div class="source">Pierazzo 2015: 5</div>
 
-						<div class="quote">Probabilmente ci volevano ingegneri per scassinare il '900 e farlo esplodere, ma se <i>l'altra intelligenza</i> non entra al più presto nei processi di produzione del Game, è difficile che il futuro ci riservi un habitat sostenibile. C'è bisogno di cultura femminile, di <b>sapere umanistico</b>, di memoria non americana, di talenti cresciuti nella sconfitta e di intelligenze che vengono dai margini.</div>
+						<div class="quote">Probabilmente ci volevano ingegneri per scassinare il '900 e farlo esplodere, ma se <i>l'altra intelligenza</i> non entra al più presto nei processi di <b>produzione</b> del Game, è difficile che il futuro ci riservi un habitat sostenibile. C'è bisogno di cultura femminile, di <b>sapere umanistico</b>, di memoria non americana, di talenti cresciuti nella sconfitta e di intelligenze che vengono dai margini.</div>
 						<div class="source">Barricco 2018: 323</div>
 					</div>
 				</section>
