--- a/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html
+++ b/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html
@@ -364,6 +364,7 @@
 				<section>
 					<h3>Contenu. L'importance des données</h3>
 					<div class="quote">leur utilité [des interfaces] est en partie limitée dans le temps et certainement limitée face à la richesse des <b>réutilisations</b> possibles des <b>données</b>, qui sont, elles, en tant que <b>production scientifique</b>, pérennes et susceptibles d’une vie beaucoup plus longue et de multiples renaissances.</div>
+					<div class="source">Camps </div>
 				</section>
 
 				<section>
