--- a/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html
+++ b/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html
@@ -364,7 +364,7 @@
 				<section>
 					<h3>Contenu. L'importance des données</h3>
 					<div class="quote">leur utilité [des interfaces] est en partie limitée dans le temps et certainement limitée face à la richesse des <b>réutilisations</b> possibles des <b>données</b>, qui sont, elles, en tant que <b>production scientifique</b>, pérennes et susceptibles d’une vie beaucoup plus longue et de multiples renaissances.</div>
-					<div class="source">Camps </div>
+					<div class="source">Camps 2018</div>
 				</section>
 
 				<section>
@@ -438,6 +438,70 @@
 					<div class="quote">Les textes qui ont orienté le <b>développement d’outils</b> destinés à aider la recherche en sciences humaines et sociales proposent en même temps une <b>réinterprétation des structures conceptuelles</b> à travers lesquelles l’homme se rapporte au monde et, surtout, structure et organise sa connaissance. En d’autres mots, nous sommes face à un <b>changement de paradigme dans la façon d’agencer les contenus</b> et, par ce fait même, à une <b>nouvelle conception du savoir et de sa circulation</b> dans la société.</div>
 					<div class="source">Vitali-Rosati and Sinatra 2014: chap.3</div>
 				</section>
+
+
+				<section data-background-image="images/newMediaReader_all.png" data-background-size="contain">
+					<br/><br/><br/><br/><br/><br/><br/><br/>
+					<div style="text-align: left;"><p>Ed. by Wardrip-Fruin and Montfort
+						<br/>
+					MIT Press, 2003</p></div>
+				</section>
+
+				<section>
+					Un souci commun : gérer l'explosion d'information
+				</section>
+
+				<!--
+				<section>
+					<table>
+						<tr>
+							<td>
+								<img src="images/otlet.jpg" width="200px">
+							</td>
+							<td>
+								<div class="quote">Pour rendre accessible la quantité d’informations et d’articles donnés chaque jour dans la presse quotidienne, dans les revues, pour conserver les brochures, comptes rendus, prospectus, les documents officiels, pour retrouver les matières éparses dans les livres, pour faire un tout homogène de ces masses incohérentes, il faut des procédés nouveaux, très distincts de ceux de l’ancienne bibliothéconomie, tels qu’ils sont appliqués.</div>
+					<div class="source">Otler 1934: 6</div>
+							</td>
+						</tr>
+					</table>
+				</section>
+			-->
+				<section data-background-image="images/otlet.jpg" data-background-size="contain">
+					<br/><br/><br/><br/><br/><br/>
+					<div class="quote back">Pour <b>rendre accessible</b> la quantité d’informations et d’articles donnés chaque jour dans la presse quotidienne, dans les revues, pour conserver les brochures, comptes rendus, prospectus, les documents officiels, pour <b>retrouver</b> les matières éparses dans les livres, pour <b>faire un tout homogène</b> de ces masses incohérentes, il faut des <b>procédés nouveaux</b>, très distincts de ceux de l’ancienne bibliothéconomie, tels qu’ils sont appliqués.</div>
+					<div class="source back">Otlet 1934: 6</div>
+				</section>
+
+
+
+				<section>
+					<div class="quote" style="text-align: left; font-size: 0.6em">Nous devons avoir <b>un complexe de machines associées</b> qui réalise simultanément ou à la suite les opérations suivantes:<br/>1° <b>transformation</b> du son en écriture;<br/>2° <b>multiplication de cette écriture</b> tel nombre de fois qu’il est utile;<br/>3° établissement des documents de manière que chaque donnée ait son individualité propre et dans ses <b>relations</b> avec celles de tout l’ensemble, qu’elle y soit rappelée là où il est nécessaire; [...] <br/>5° <b>classement automatique</b> de ces documents et mise en place dans les classeurs;<br/>6° récupération automatique des documents à <b>consulter et présentation</b>, soit sous les yeux ou sous la partie d’une machine ayant à y faire des inscriptions additionelles;<br/>7° <b>manipulation mécanique</b> à volonté de toutes les données enregistrées pour obtenir de nouvelles combinaisons de faits, de nouveaux rapports d’idées, de nouvelles opérations à l’aide des chiffres.</div>
+					<div class="source">Otlet 1934: 391</div>
+				</section>
+
+				<section data-background-image="images/bush.jpg" data-background-size="contain">
+				</section>
+
+				<section>
+					<div class="quote" style="font-size: 0.7em">Disons que le propriétaire du memex est intéressé par l’origine et les propriétés de l’arc et sa flèche. Il étudie précisément pourquoi l’arc court turc semblait supérieur à l’arc long anglais durant les affrontements des Croisades. Il a des <b>dizaines de livres et d’articles</b> potentiellement intéressants dans son memex. Il commence par parcourir une encyclopédie, y repère un article intéressant mais peu précis, et le laisse affiché. Ensuite, dans un récit, il trouve un autre élément pertinent, et <b>lie les deux ensemble</b>. Il continue ainsi, construisant un <b>réseau d’éléments sources</b>. Parfois, il insère un <b>commentaire</b>, qu’il soit relié au réseau principal ou afférent à un élément en particulier. [...] Il insère une page d’<b>analyse manuscrite</b>. Il construit ainsi son propre <b>itinéraire parmi le labyrinthe de documents</b> mis à sa disposition.</div>
+					<div class="source" style="font-size:0.5em">Bush 1945 (trad. fr. dans Anthony Masure. <i>Le design des programmes. Des façons de faire du numérique</i>. Thèse dirigée par M. Pierre-Damien Huyghe, Université Paris 1 Panthéon-Sorbonne. 2014. <a href="http://www.softphd.com/">www.softphd.com/</a>)
+				</section>
+
+				<section>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/_IZw2CoYztk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<p>Publicité de MT/ST de IBM. Jim Henson, 1967.
+						<br/>Le premier roman écrit avec un logiciel de traitement de texte est <i>Bomber</i> de Lan Deighton, tapé par Ellenor Handley.</p>
+					<div class="source">Cf. Kirschenbaum 2016</div>
+				</section>
+
+				<!--
+				<section data-background-image="images/IBMmtst1.jpg" data-background-size="contain">					
+				</section>
+
+
+				<section data-background-image="images/IBMmtst3.jpg" data-background-size="contain">					
+				</section>
+				-->
 
 
 
@@ -558,7 +622,6 @@
 	##################################################################################################################################
 	################################################################################################################################ ->
 
-
 				<section data-background-color="tomato">
  					<h3 style="color:black">4. Conclusions</h3>
  				</section>
@@ -589,73 +652,8 @@
 					<div class="source">Pierazzo 2015: 208</div>
 				</section>
 				
-				<section>
-					<div class="quote">What does it mean to be part of <b>software culture</b>? [...] Software studies has to investigate the <b>role of software</b> in contemporary <b>culture</b>, and the <b>cultural and social forces</b> that are shaping the <b>development</b> of software itself.</div>
-					<div class="source">Manovich 2013</div>
-				</section>
 
-				<section data-background-image="images/newMediaReader_all.png" data-background-size="contain">
-					<br/><br/><br/><br/><br/><br/><br/><br/>
-					<div style="text-align: left;"><p>Ed. by Wardrip-Fruin and Montfort
-						<br/>
-					MIT Press, 2003</p></div>
-				</section>
-
-				<section>
-					Un souci commun : gérer l'explosion d'information
-				</section>
-
-				<!--
-				<section>
-					<table>
-						<tr>
-							<td>
-								<img src="images/otlet.jpg" width="200px">
-							</td>
-							<td>
-								<div class="quote">Pour rendre accessible la quantité d’informations et d’articles donnés chaque jour dans la presse quotidienne, dans les revues, pour conserver les brochures, comptes rendus, prospectus, les documents officiels, pour retrouver les matières éparses dans les livres, pour faire un tout homogène de ces masses incohérentes, il faut des procédés nouveaux, très distincts de ceux de l’ancienne bibliothéconomie, tels qu’ils sont appliqués.</div>
-					<div class="source">Otler 1934: 6</div>
-							</td>
-						</tr>
-					</table>
-				</section>
-			-->
-				<section data-background-image="images/otlet.jpg" data-background-size="contain">
-					<br/><br/><br/><br/><br/><br/>
-					<div class="quote back">Pour <b>rendre accessible</b> la quantité d’informations et d’articles donnés chaque jour dans la presse quotidienne, dans les revues, pour conserver les brochures, comptes rendus, prospectus, les documents officiels, pour <b>retrouver</b> les matières éparses dans les livres, pour <b>faire un tout homogène</b> de ces masses incohérentes, il faut des <b>procédés nouveaux</b>, très distincts de ceux de l’ancienne bibliothéconomie, tels qu’ils sont appliqués.</div>
-					<div class="source back">Otlet 1934: 6</div>
-				</section>
-
-
-
-				<section>
-					<div class="quote" style="text-align: left; font-size: 0.6em">Nous devons avoir <b>un complexe de machines associées</b> qui réalise simultanément ou à la suite les opérations suivantes:<br/>1° <b>transformation</b> du son en écriture;<br/>2° <b>multiplication de cette écriture</b> tel nombre de fois qu’il est utile;<br/>3° établissement des documents de manière que chaque donnée ait son individualité propre et dans ses <b>relations</b> avec celles de tout l’ensemble, qu’elle y soit rappelée là où il est nécessaire; [...] <br/>5° <b>classement automatique</b> de ces documents et mise en place dans les classeurs;<br/>6° récupération automatique des documents à <b>consulter et présentation</b>, soit sous les yeux ou sous la partie d’une machine ayant à y faire des inscriptions additionelles;<br/>7° <b>manipulation mécanique</b> à volonté de toutes les données enregistrées pour obtenir de nouvelles combinaisons de faits, de nouveaux rapports d’idées, de nouvelles opérations à l’aide des chiffres.</div>
-					<div class="source">Otlet 1934: 391</div>
-				</section>
-
-				<section data-background-image="images/bush.jpg" data-background-size="contain">
-				</section>
-
-				<section>
-					<div class="quote" style="font-size: 0.7em">Disons que le propriétaire du memex est intéressé par l’origine et les propriétés de l’arc et sa flèche. Il étudie précisément pourquoi l’arc court turc semblait supérieur à l’arc long anglais durant les affrontements des Croisades. Il a des <b>dizaines de livres et d’articles</b> potentiellement intéressants dans son memex. Il commence par parcourir une encyclopédie, y repère un article intéressant mais peu précis, et le laisse affiché. Ensuite, dans un récit, il trouve un autre élément pertinent, et <b>lie les deux ensemble</b>. Il continue ainsi, construisant un <b>réseau d’éléments sources</b>. Parfois, il insère un <b>commentaire</b>, qu’il soit relié au réseau principal ou afférent à un élément en particulier. [...] Il insère une page d’<b>analyse manuscrite</b>. Il construit ainsi son propre <b>itinéraire parmi le labyrinthe de documents</b> mis à sa disposition.</div>
-					<div class="source" style="font-size:0.5em">Bush 1945 (trad. fr. dans Anthony Masure. <i>Le design des programmes. Des façons de faire du numérique</i>. Thèse dirigée par M. Pierre-Damien Huyghe, Université Paris 1 Panthéon-Sorbonne. 2014. <a href="http://www.softphd.com/">www.softphd.com/</a>)
-				</section>
-
-				<section>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/_IZw2CoYztk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<p>Publicité de MT/ST de IBM. Jim Henson, 1967.
-						<br/>Le premier roman écrit avec un logiciel de traitement de texte est <i>Bomber</i> de Lan Deighton, tapé par Ellenor Handley.</p>
-					<div class="source">Cf. Kirschenbaum 2016</div>
-				</section>
-
-				<!--
-				<section data-background-image="images/IBMmtst1.jpg" data-background-size="contain">					
-				</section>
-
-
-				<section data-background-image="images/IBMmtst3.jpg" data-background-size="contain">					
-				</section>
-				-->
+				
 
 				<section>
 					<div class="quote"><b>productively integrate the new methods without surrendering control over the conceptual infrastructure of our work</b></div>
